Backend/gramatica/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> instrucciones
Rule 1     instrucciones -> instrucciones instruccion
Rule 2     instrucciones -> instruccion
Rule 3     instruccion -> instruccion2
Rule 4     instruccion -> funcion
Rule 5     instruccion -> comentarios
Rule 6     instruccion2 -> instruccion3 PTOYCOMA
Rule 7     instruccion2 -> instruccion3
Rule 8     instruccion4 -> instruccion4 instruccion2
Rule 9     instruccion4 -> instruccion2
Rule 10    bloque -> LLAIZQ instruccion4 LLADER
Rule 11    bloque -> LLAIZQ LLADER
Rule 12    instruccion3 -> declaracion
Rule 13    instruccion3 -> asignacion
Rule 14    instruccion3 -> impresion
Rule 15    instruccion3 -> condicional
Rule 16    instruccion3 -> ciclo_while
Rule 17    instruccion3 -> ciclo_for
Rule 18    instruccion3 -> ciclo_for_of
Rule 19    instruccion3 -> llamada_funcion
Rule 20    instruccion3 -> return
Rule 21    instruccion3 -> break
Rule 22    instruccion3 -> continue
Rule 23    instruccion3 -> comentarios
Rule 24    instruccion3 -> instanciar
Rule 25    instruccion3 -> declaracionInterface
Rule 26    instruccion3 -> declaracionArray
Rule 27    instruccion3 -> asignacion_array
Rule 28    comentarios -> COMENTARIO
Rule 29    comentarios -> COMENTARIO_MULTILINEA
Rule 30    declaracion -> LET ID IGUAL expresion
Rule 31    declaracion -> LET ID
Rule 32    declaracion -> LET ID DOSPUNTOS tipo IGUAL expresion
Rule 33    declaracion -> LET ID DOSPUNTOS tipo
Rule 34    asignacion -> ID IGUAL expresion
Rule 35    asignacion -> dec
Rule 36    asignacion -> inc
Rule 37    asignacion -> asignacionInterface
Rule 38    dec -> ID DECREMENTO
Rule 39    dec -> DECREMENTO ID
Rule 40    inc -> ID INCREMENTO
Rule 41    inc -> INCREMENTO ID
Rule 42    impresion -> CONSOLE PUNTO LOG PARIZQ expresion PARDER
Rule 43    impresion -> CONSOLE PUNTO LOG PARIZQ lista_argumentos PARDER
Rule 44    condicional -> IF PARIZQ expresion PARDER bloque
Rule 45    condicional -> IF PARIZQ expresion PARDER bloque ELSE bloque
Rule 46    condicional -> IF PARIZQ expresion PARDER bloque lista_elif
Rule 47    condicional -> IF PARIZQ expresion PARDER bloque lista_elif ELSE bloque
Rule 48    lista_elif -> lista_elif elseif
Rule 49    lista_elif -> elseif
Rule 50    elseif -> ELSE IF PARIZQ expresion PARDER bloque
Rule 51    ciclo_while -> WHILE PARIZQ expresion PARDER bloque
Rule 52    ciclo_for -> FOR PARIZQ declaracion PTOYCOMA expresion PTOYCOMA asignacion PARDER bloque
Rule 53    ciclo_for -> FOR PARIZQ asignacion PTOYCOMA expresion PTOYCOMA asignacion PARDER bloque
Rule 54    ciclo_for_of -> FOR PARIZQ LET ID OF expresion PARDER bloque
Rule 55    funcion -> FUNCTION ID PARIZQ lista_parametros PARDER bloque
Rule 56    funcion -> FUNCTION ID PARIZQ lista_parametros PARDER DOSPUNTOS tipo bloque
Rule 57    funcion -> FUNCTION ID PARIZQ PARDER bloque
Rule 58    funcion -> FUNCTION ID PARIZQ PARDER DOSPUNTOS tipo bloque
Rule 59    funcion -> FUNCTION ID PARIZQ lista_parametros PARDER DOSPUNTOS tipo CORIZQ CORDER bloque
Rule 60    lista_parametros -> lista_parametros COMA parametro
Rule 61    lista_parametros -> parametro
Rule 62    parametro -> ID DOSPUNTOS tipo
Rule 63    parametro -> ID DOSPUNTOS tipo CORIZQ CORDER
Rule 64    expresion -> llamada_funcion
Rule 65    llamada_funcion -> ID PARIZQ lista_argumentos PARDER
Rule 66    llamada_funcion -> ID PARIZQ PARDER
Rule 67    lista_argumentos -> lista_argumentos COMA expresion
Rule 68    lista_argumentos -> expresion
Rule 69    tipo -> NUMBER
Rule 70    tipo -> STRING
Rule 71    tipo -> BOOLEAN
Rule 72    tipo -> ANY
Rule 73    tipo -> NULL
Rule 74    expresion -> expresion MAS expresion
Rule 75    expresion -> expresion MENOS expresion
Rule 76    expresion -> expresion POR expresion
Rule 77    expresion -> expresion DIVIDIDO expresion
Rule 78    expresion -> expresion MODULO expresion
Rule 79    expresion -> expresion POTENCIA expresion
Rule 80    expresion -> MENOS expresion
Rule 81    expresion -> expresion MAYOR expresion
Rule 82    expresion -> expresion MENOR expresion
Rule 83    expresion -> expresion MAYORIGUAL expresion
Rule 84    expresion -> expresion MENORIGUAL expresion
Rule 85    expresion -> expresion IGUALACION expresion
Rule 86    expresion -> expresion DISTINTO expresion
Rule 87    expresion -> expresion AND expresion
Rule 88    expresion -> expresion OR expresion
Rule 89    expresion -> NOT expresion
Rule 90    expresion -> dec
Rule 91    expresion -> inc
Rule 92    expresion -> casteo
Rule 93    expresion -> PARIZQ expresion PARDER
Rule 94    expresion -> ENTERO
Rule 95    expresion -> DECIMAL
Rule 96    expresion -> CADENA
Rule 97    expresion -> NULL
Rule 98    expresion -> booleano
Rule 99    expresion -> ID
Rule 100   booleano -> TRUE
Rule 101   booleano -> FALSE
Rule 102   expresion -> aproximacion
Rule 103   expresion -> exponencial
Rule 104   expresion -> separador
Rule 105   expresion -> concatenacion
Rule 106   expresion -> to_minusculas
Rule 107   aproximacion -> ID PUNTO TOFIXED PARIZQ expresion PARDER
Rule 108   exponencial -> ID PUNTO TOEXPONENTIAL PARIZQ expresion PARDER
Rule 109   expresion -> ID PUNTO TOUPPERCASE PARIZQ PARDER
Rule 110   to_minusculas -> ID PUNTO TOLOWERCASE PARIZQ PARDER
Rule 111   separador -> ID PUNTO SPLIT PARIZQ expresion PARDER
Rule 112   concatenacion -> ID PUNTO CONCAT PARIZQ expresion PARDER
Rule 113   casteo -> ID PUNTO TOSTRING PARIZQ PARDER
Rule 114   casteo -> CAST_STRING PARIZQ expresion PARDER
Rule 115   casteo -> CAST_NUMBER PARIZQ expresion PARDER
Rule 116   return -> RETURN expresion
Rule 117   return -> RETURN
Rule 118   break -> BREAK
Rule 119   continue -> CONTINUE
Rule 120   instanciar -> INTERFACE ID bloquestruct
Rule 121   bloquestruct -> LLAIZQ lista_params_struct LLADER
Rule 122   lista_params_struct -> lista_params_struct param_struct
Rule 123   lista_params_struct -> param_struct
Rule 124   param_struct -> ID DOSPUNTOS tipo PTOYCOMA
Rule 125   declaracionInterface -> LET ID DOSPUNTOS ID IGUAL expresion_interface
Rule 126   expresion_interface -> LLAIZQ lista_d LLADER
Rule 127   expresion -> expresion_interface
Rule 128   lista_d -> lista_d COMA parDecl
Rule 129   lista_d -> parDecl
Rule 130   parDecl -> ID DOSPUNTOS expresion
Rule 131   expresion -> ID PUNTO ID
Rule 132   asignacionInterface -> ID PUNTO ID IGUAL expresion
Rule 133   declaracionArray -> LET ID DOSPUNTOS ARRAY MENOR tipo MAYOR IGUAL CORIZQ lista_exp CORDER
Rule 134   declaracionArray -> LET ID DOSPUNTOS ARRAY MENOR tipo MAYOR IGUAL CORIZQ CORDER
Rule 135   declaracionArray -> LET ID DOSPUNTOS ARRAY MENOR tipo MAYOR
Rule 136   declaracionArray -> LET ID DOSPUNTOS tipo CORIZQ CORDER
Rule 137   declaracionArray -> LET ID DOSPUNTOS tipo CORIZQ CORDER IGUAL CORIZQ lista_exp CORDER
Rule 138   declaracionArray -> LET ID DOSPUNTOS tipo CORIZQ CORDER IGUAL CORIZQ CORDER
Rule 139   declaracionArray -> LET ID IGUAL CORIZQ CORDER
Rule 140   declaracionArray -> LET ID DOSPUNTOS tipo CORIZQ CORDER IGUAL expresion
Rule 141   declaracionArray -> LET ID IGUAL CORIZQ lista_exp CORDER
Rule 142   declaracionArray -> LET ID DOSPUNTOS ID IGUAL CORIZQ CORDER
Rule 143   declaracionArray -> LET ID DOSPUNTOS ID IGUAL CORIZQ lista_exp CORDER
Rule 144   declaracionArray -> LET ID DOSPUNTOS ID CORIZQ CORDER
Rule 145   declaracionArray -> LET ID DOSPUNTOS ID CORIZQ CORDER IGUAL CORIZQ lista_exp CORDER
Rule 146   lista_exp -> lista_exp COMA expresion
Rule 147   lista_exp -> expresion
Rule 148   expresion -> arreglo
Rule 149   arreglo -> CORIZQ lista_exp CORDER
Rule 150   arreglo -> CORIZQ CORDER
Rule 151   expresion -> acceso_array
Rule 152   acceso_array -> ID lista_acceso_array
Rule 153   expresion -> acceso_array_interface
Rule 154   acceso_array_interface -> ID lista_acceso_array PUNTO ID
Rule 155   lista_acceso_array -> lista_acceso_array acceso_array_exp
Rule 156   lista_acceso_array -> acceso_array_exp
Rule 157   acceso_array_exp -> CORIZQ expresion CORDER
Rule 158   asignacion_array -> ID lista_acceso_array IGUAL expresion
Rule 159   expresion -> TYPEOF PARIZQ expresion PARDER
Rule 160   expresion -> ID PUNTO LENGTH
Rule 161   instruccion -> error PTOYCOMA

Terminals, with rules where they appear

AND                  : 87
ANY                  : 72
ARRAY                : 133 134 135
BOOLEAN              : 71
BREAK                : 118
CADENA               : 96
CAST_NUMBER          : 115
CAST_STRING          : 114
COMA                 : 60 67 128 146
COMENTARIO           : 28
COMENTARIO_MULTILINEA : 29
CONCAT               : 112
CONSOLE              : 42 43
CONTINUE             : 119
CORDER               : 59 63 133 134 136 137 137 138 138 139 140 141 142 143 144 145 145 149 150 157
CORIZQ               : 59 63 133 134 136 137 137 138 138 139 140 141 142 143 144 145 145 149 150 157
DECIMAL              : 95
DECREMENTO           : 38 39
DISTINTO             : 86
DIVIDIDO             : 77
DOSPUNTOS            : 32 33 56 58 59 62 63 124 125 130 133 134 135 136 137 138 140 142 143 144 145
ELSE                 : 45 47 50
ENTERO               : 94
FALSE                : 101
FOR                  : 52 53 54
FUNCTION             : 55 56 57 58 59
ID                   : 30 31 32 33 34 38 39 40 41 54 55 56 57 58 59 62 63 65 66 99 107 108 109 110 111 112 113 120 124 125 125 130 131 131 132 132 133 134 135 136 137 138 139 140 141 142 142 143 143 144 144 145 145 152 154 154 158 160
IF                   : 44 45 46 47 50
IGUAL                : 30 32 34 125 132 133 134 137 138 139 140 141 142 143 145 158
IGUALACION           : 85
INCREMENTO           : 40 41
INTERFACE            : 120
LENGTH               : 160
LET                  : 30 31 32 33 54 125 133 134 135 136 137 138 139 140 141 142 143 144 145
LLADER               : 10 11 121 126
LLAIZQ               : 10 11 121 126
LOG                  : 42 43
MAS                  : 74
MAYOR                : 81 133 134 135
MAYORIGUAL           : 83
MENOR                : 82 133 134 135
MENORIGUAL           : 84
MENOS                : 75 80
MODULO               : 78
NOT                  : 89
NULL                 : 73 97
NUMBER               : 69
OF                   : 54
OR                   : 88
PARDER               : 42 43 44 45 46 47 50 51 52 53 54 55 56 57 58 59 65 66 93 107 108 109 110 111 112 113 114 115 159
PARIZQ               : 42 43 44 45 46 47 50 51 52 53 54 55 56 57 58 59 65 66 93 107 108 109 110 111 112 113 114 115 159
POR                  : 76
POTENCIA             : 79
PTOYCOMA             : 6 52 52 53 53 124 161
PUNTO                : 42 43 107 108 109 110 111 112 113 131 132 154 160
RETURN               : 116 117
SPLIT                : 111
STRING               : 70
TOEXPONENTIAL        : 108
TOFIXED              : 107
TOLOWERCASE          : 110
TOSTRING             : 113
TOUPPERCASE          : 109
TRUE                 : 100
TYPEOF               : 159
WHILE                : 51
error                : 161

Nonterminals, with rules where they appear

acceso_array         : 151
acceso_array_exp     : 155 156
acceso_array_interface : 153
aproximacion         : 102
arreglo              : 148
asignacion           : 13 52 53 53
asignacionInterface  : 37
asignacion_array     : 27
bloque               : 44 45 45 46 47 47 50 51 52 53 54 55 56 57 58 59
bloquestruct         : 120
booleano             : 98
break                : 21
casteo               : 92
ciclo_for            : 17
ciclo_for_of         : 18
ciclo_while          : 16
comentarios          : 5 23
concatenacion        : 105
condicional          : 15
continue             : 22
dec                  : 35 90
declaracion          : 12 52
declaracionArray     : 26
declaracionInterface : 25
elseif               : 48 49
exponencial          : 103
expresion            : 30 32 34 42 44 45 46 47 50 51 52 53 54 67 68 74 74 75 75 76 76 77 77 78 78 79 79 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 93 107 108 111 112 114 115 116 130 132 140 146 147 157 158 159
expresion_interface  : 125 127
funcion              : 4
impresion            : 14
inc                  : 36 91
instanciar           : 24
instruccion          : 1 2
instruccion2         : 3 8 9
instruccion3         : 6 7
instruccion4         : 8 10
instrucciones        : 1 0
lista_acceso_array   : 152 154 155 158
lista_argumentos     : 43 65 67
lista_d              : 126 128
lista_elif           : 46 47 48
lista_exp            : 133 137 141 143 145 146 149
lista_parametros     : 55 56 59 60
lista_params_struct  : 121 122
llamada_funcion      : 19 64
parDecl              : 128 129
param_struct         : 122 123
parametro            : 60 61
return               : 20
separador            : 104
tipo                 : 32 33 56 58 59 62 63 124 133 134 135 136 137 138 140
to_minusculas        : 106

Parsing method: LALR

state 0

    (0) S' -> . instrucciones
    (1) instrucciones -> . instrucciones instruccion
    (2) instrucciones -> . instruccion
    (3) instruccion -> . instruccion2
    (4) instruccion -> . funcion
    (5) instruccion -> . comentarios
    (161) instruccion -> . error PTOYCOMA
    (6) instruccion2 -> . instruccion3 PTOYCOMA
    (7) instruccion2 -> . instruccion3
    (55) funcion -> . FUNCTION ID PARIZQ lista_parametros PARDER bloque
    (56) funcion -> . FUNCTION ID PARIZQ lista_parametros PARDER DOSPUNTOS tipo bloque
    (57) funcion -> . FUNCTION ID PARIZQ PARDER bloque
    (58) funcion -> . FUNCTION ID PARIZQ PARDER DOSPUNTOS tipo bloque
    (59) funcion -> . FUNCTION ID PARIZQ lista_parametros PARDER DOSPUNTOS tipo CORIZQ CORDER bloque
    (28) comentarios -> . COMENTARIO
    (29) comentarios -> . COMENTARIO_MULTILINEA
    (12) instruccion3 -> . declaracion
    (13) instruccion3 -> . asignacion
    (14) instruccion3 -> . impresion
    (15) instruccion3 -> . condicional
    (16) instruccion3 -> . ciclo_while
    (17) instruccion3 -> . ciclo_for
    (18) instruccion3 -> . ciclo_for_of
    (19) instruccion3 -> . llamada_funcion
    (20) instruccion3 -> . return
    (21) instruccion3 -> . break
    (22) instruccion3 -> . continue
    (23) instruccion3 -> . comentarios
    (24) instruccion3 -> . instanciar
    (25) instruccion3 -> . declaracionInterface
    (26) instruccion3 -> . declaracionArray
    (27) instruccion3 -> . asignacion_array
    (30) declaracion -> . LET ID IGUAL expresion
    (31) declaracion -> . LET ID
    (32) declaracion -> . LET ID DOSPUNTOS tipo IGUAL expresion
    (33) declaracion -> . LET ID DOSPUNTOS tipo
    (34) asignacion -> . ID IGUAL expresion
    (35) asignacion -> . dec
    (36) asignacion -> . inc
    (37) asignacion -> . asignacionInterface
    (42) impresion -> . CONSOLE PUNTO LOG PARIZQ expresion PARDER
    (43) impresion -> . CONSOLE PUNTO LOG PARIZQ lista_argumentos PARDER
    (44) condicional -> . IF PARIZQ expresion PARDER bloque
    (45) condicional -> . IF PARIZQ expresion PARDER bloque ELSE bloque
    (46) condicional -> . IF PARIZQ expresion PARDER bloque lista_elif
    (47) condicional -> . IF PARIZQ expresion PARDER bloque lista_elif ELSE bloque
    (51) ciclo_while -> . WHILE PARIZQ expresion PARDER bloque
    (52) ciclo_for -> . FOR PARIZQ declaracion PTOYCOMA expresion PTOYCOMA asignacion PARDER bloque
    (53) ciclo_for -> . FOR PARIZQ asignacion PTOYCOMA expresion PTOYCOMA asignacion PARDER bloque
    (54) ciclo_for_of -> . FOR PARIZQ LET ID OF expresion PARDER bloque
    (65) llamada_funcion -> . ID PARIZQ lista_argumentos PARDER
    (66) llamada_funcion -> . ID PARIZQ PARDER
    (116) return -> . RETURN expresion
    (117) return -> . RETURN
    (118) break -> . BREAK
    (119) continue -> . CONTINUE
    (120) instanciar -> . INTERFACE ID bloquestruct
    (125) declaracionInterface -> . LET ID DOSPUNTOS ID IGUAL expresion_interface
    (133) declaracionArray -> . LET ID DOSPUNTOS ARRAY MENOR tipo MAYOR IGUAL CORIZQ lista_exp CORDER
    (134) declaracionArray -> . LET ID DOSPUNTOS ARRAY MENOR tipo MAYOR IGUAL CORIZQ CORDER
    (135) declaracionArray -> . LET ID DOSPUNTOS ARRAY MENOR tipo MAYOR
    (136) declaracionArray -> . LET ID DOSPUNTOS tipo CORIZQ CORDER
    (137) declaracionArray -> . LET ID DOSPUNTOS tipo CORIZQ CORDER IGUAL CORIZQ lista_exp CORDER
    (138) declaracionArray -> . LET ID DOSPUNTOS tipo CORIZQ CORDER IGUAL CORIZQ CORDER
    (139) declaracionArray -> . LET ID IGUAL CORIZQ CORDER
    (140) declaracionArray -> . LET ID DOSPUNTOS tipo CORIZQ CORDER IGUAL expresion
    (141) declaracionArray -> . LET ID IGUAL CORIZQ lista_exp CORDER
    (142) declaracionArray -> . LET ID DOSPUNTOS ID IGUAL CORIZQ CORDER
    (143) declaracionArray -> . LET ID DOSPUNTOS ID IGUAL CORIZQ lista_exp CORDER
    (144) declaracionArray -> . LET ID DOSPUNTOS ID CORIZQ CORDER
    (145) declaracionArray -> . LET ID DOSPUNTOS ID CORIZQ CORDER IGUAL CORIZQ lista_exp CORDER
    (158) asignacion_array -> . ID lista_acceso_array IGUAL expresion
    (38) dec -> . ID DECREMENTO
    (39) dec -> . DECREMENTO ID
    (40) inc -> . ID INCREMENTO
    (41) inc -> . INCREMENTO ID
    (132) asignacionInterface -> . ID PUNTO ID IGUAL expresion

    error           shift and go to state 6
    FUNCTION        shift and go to state 8
    COMENTARIO      shift and go to state 10
    COMENTARIO_MULTILINEA shift and go to state 11
    LET             shift and go to state 27
    ID              shift and go to state 9
    CONSOLE         shift and go to state 31
    IF              shift and go to state 32
    WHILE           shift and go to state 33
    FOR             shift and go to state 34
    RETURN          shift and go to state 35
    BREAK           shift and go to state 36
    CONTINUE        shift and go to state 37
    INTERFACE       shift and go to state 38
    DECREMENTO      shift and go to state 39
    INCREMENTO      shift and go to state 40

    instrucciones                  shift and go to state 1
    instruccion                    shift and go to state 2
    instruccion2                   shift and go to state 3
    funcion                        shift and go to state 4
    comentarios                    shift and go to state 5
    instruccion3                   shift and go to state 7
    declaracion                    shift and go to state 12
    asignacion                     shift and go to state 13
    impresion                      shift and go to state 14
    condicional                    shift and go to state 15
    ciclo_while                    shift and go to state 16
    ciclo_for                      shift and go to state 17
    ciclo_for_of                   shift and go to state 18
    llamada_funcion                shift and go to state 19
    return                         shift and go to state 20
    break                          shift and go to state 21
    continue                       shift and go to state 22
    instanciar                     shift and go to state 23
    declaracionInterface           shift and go to state 24
    declaracionArray               shift and go to state 25
    asignacion_array               shift and go to state 26
    dec                            shift and go to state 28
    inc                            shift and go to state 29
    asignacionInterface            shift and go to state 30

state 1

    (0) S' -> instrucciones .
    (1) instrucciones -> instrucciones . instruccion
    (3) instruccion -> . instruccion2
    (4) instruccion -> . funcion
    (5) instruccion -> . comentarios
    (161) instruccion -> . error PTOYCOMA
    (6) instruccion2 -> . instruccion3 PTOYCOMA
    (7) instruccion2 -> . instruccion3
    (55) funcion -> . FUNCTION ID PARIZQ lista_parametros PARDER bloque
    (56) funcion -> . FUNCTION ID PARIZQ lista_parametros PARDER DOSPUNTOS tipo bloque
    (57) funcion -> . FUNCTION ID PARIZQ PARDER bloque
    (58) funcion -> . FUNCTION ID PARIZQ PARDER DOSPUNTOS tipo bloque
    (59) funcion -> . FUNCTION ID PARIZQ lista_parametros PARDER DOSPUNTOS tipo CORIZQ CORDER bloque
    (28) comentarios -> . COMENTARIO
    (29) comentarios -> . COMENTARIO_MULTILINEA
    (12) instruccion3 -> . declaracion
    (13) instruccion3 -> . asignacion
    (14) instruccion3 -> . impresion
    (15) instruccion3 -> . condicional
    (16) instruccion3 -> . ciclo_while
    (17) instruccion3 -> . ciclo_for
    (18) instruccion3 -> . ciclo_for_of
    (19) instruccion3 -> . llamada_funcion
    (20) instruccion3 -> . return
    (21) instruccion3 -> . break
    (22) instruccion3 -> . continue
    (23) instruccion3 -> . comentarios
    (24) instruccion3 -> . instanciar
    (25) instruccion3 -> . declaracionInterface
    (26) instruccion3 -> . declaracionArray
    (27) instruccion3 -> . asignacion_array
    (30) declaracion -> . LET ID IGUAL expresion
    (31) declaracion -> . LET ID
    (32) declaracion -> . LET ID DOSPUNTOS tipo IGUAL expresion
    (33) declaracion -> . LET ID DOSPUNTOS tipo
    (34) asignacion -> . ID IGUAL expresion
    (35) asignacion -> . dec
    (36) asignacion -> . inc
    (37) asignacion -> . asignacionInterface
    (42) impresion -> . CONSOLE PUNTO LOG PARIZQ expresion PARDER
    (43) impresion -> . CONSOLE PUNTO LOG PARIZQ lista_argumentos PARDER
    (44) condicional -> . IF PARIZQ expresion PARDER bloque
    (45) condicional -> . IF PARIZQ expresion PARDER bloque ELSE bloque
    (46) condicional -> . IF PARIZQ expresion PARDER bloque lista_elif
    (47) condicional -> . IF PARIZQ expresion PARDER bloque lista_elif ELSE bloque
    (51) ciclo_while -> . WHILE PARIZQ expresion PARDER bloque
    (52) ciclo_for -> . FOR PARIZQ declaracion PTOYCOMA expresion PTOYCOMA asignacion PARDER bloque
    (53) ciclo_for -> . FOR PARIZQ asignacion PTOYCOMA expresion PTOYCOMA asignacion PARDER bloque
    (54) ciclo_for_of -> . FOR PARIZQ LET ID OF expresion PARDER bloque
    (65) llamada_funcion -> . ID PARIZQ lista_argumentos PARDER
    (66) llamada_funcion -> . ID PARIZQ PARDER
    (116) return -> . RETURN expresion
    (117) return -> . RETURN
    (118) break -> . BREAK
    (119) continue -> . CONTINUE
    (120) instanciar -> . INTERFACE ID bloquestruct
    (125) declaracionInterface -> . LET ID DOSPUNTOS ID IGUAL expresion_interface
    (133) declaracionArray -> . LET ID DOSPUNTOS ARRAY MENOR tipo MAYOR IGUAL CORIZQ lista_exp CORDER
    (134) declaracionArray -> . LET ID DOSPUNTOS ARRAY MENOR tipo MAYOR IGUAL CORIZQ CORDER
    (135) declaracionArray -> . LET ID DOSPUNTOS ARRAY MENOR tipo MAYOR
    (136) declaracionArray -> . LET ID DOSPUNTOS tipo CORIZQ CORDER
    (137) declaracionArray -> . LET ID DOSPUNTOS tipo CORIZQ CORDER IGUAL CORIZQ lista_exp CORDER
    (138) declaracionArray -> . LET ID DOSPUNTOS tipo CORIZQ CORDER IGUAL CORIZQ CORDER
    (139) declaracionArray -> . LET ID IGUAL CORIZQ CORDER
    (140) declaracionArray -> . LET ID DOSPUNTOS tipo CORIZQ CORDER IGUAL expresion
    (141) declaracionArray -> . LET ID IGUAL CORIZQ lista_exp CORDER
    (142) declaracionArray -> . LET ID DOSPUNTOS ID IGUAL CORIZQ CORDER
    (143) declaracionArray -> . LET ID DOSPUNTOS ID IGUAL CORIZQ lista_exp CORDER
    (144) declaracionArray -> . LET ID DOSPUNTOS ID CORIZQ CORDER
    (145) declaracionArray -> . LET ID DOSPUNTOS ID CORIZQ CORDER IGUAL CORIZQ lista_exp CORDER
    (158) asignacion_array -> . ID lista_acceso_array IGUAL expresion
    (38) dec -> . ID DECREMENTO
    (39) dec -> . DECREMENTO ID
    (40) inc -> . ID INCREMENTO
    (41) inc -> . INCREMENTO ID
    (132) asignacionInterface -> . ID PUNTO ID IGUAL expresion

    error           shift and go to state 6
    FUNCTION        shift and go to state 8
    COMENTARIO      shift and go to state 10
    COMENTARIO_MULTILINEA shift and go to state 11
    LET             shift and go to state 27
    ID              shift and go to state 9
    CONSOLE         shift and go to state 31
    IF              shift and go to state 32
    WHILE           shift and go to state 33
    FOR             shift and go to state 34
    RETURN          shift and go to state 35
    BREAK           shift and go to state 36
    CONTINUE        shift and go to state 37
    INTERFACE       shift and go to state 38
    DECREMENTO      shift and go to state 39
    INCREMENTO      shift and go to state 40

    instruccion                    shift and go to state 41
    instruccion2                   shift and go to state 3
    funcion                        shift and go to state 4
    comentarios                    shift and go to state 5
    instruccion3                   shift and go to state 7
    declaracion                    shift and go to state 12
    asignacion                     shift and go to state 13
    impresion                      shift and go to state 14
    condicional                    shift and go to state 15
    ciclo_while                    shift and go to state 16
    ciclo_for                      shift and go to state 17
    ciclo_for_of                   shift and go to state 18
    llamada_funcion                shift and go to state 19
    return                         shift and go to state 20
    break                          shift and go to state 21
    continue                       shift and go to state 22
    instanciar                     shift and go to state 23
    declaracionInterface           shift and go to state 24
    declaracionArray               shift and go to state 25
    asignacion_array               shift and go to state 26
    dec                            shift and go to state 28
    inc                            shift and go to state 29
    asignacionInterface            shift and go to state 30

state 2

    (2) instrucciones -> instruccion .

    error           reduce using rule 2 (instrucciones -> instruccion .)
    FUNCTION        reduce using rule 2 (instrucciones -> instruccion .)
    COMENTARIO      reduce using rule 2 (instrucciones -> instruccion .)
    COMENTARIO_MULTILINEA reduce using rule 2 (instrucciones -> instruccion .)
    LET             reduce using rule 2 (instrucciones -> instruccion .)
    ID              reduce using rule 2 (instrucciones -> instruccion .)
    CONSOLE         reduce using rule 2 (instrucciones -> instruccion .)
    IF              reduce using rule 2 (instrucciones -> instruccion .)
    WHILE           reduce using rule 2 (instrucciones -> instruccion .)
    FOR             reduce using rule 2 (instrucciones -> instruccion .)
    RETURN          reduce using rule 2 (instrucciones -> instruccion .)
    BREAK           reduce using rule 2 (instrucciones -> instruccion .)
    CONTINUE        reduce using rule 2 (instrucciones -> instruccion .)
    INTERFACE       reduce using rule 2 (instrucciones -> instruccion .)
    DECREMENTO      reduce using rule 2 (instrucciones -> instruccion .)
    INCREMENTO      reduce using rule 2 (instrucciones -> instruccion .)
    $end            reduce using rule 2 (instrucciones -> instruccion .)


state 3

    (3) instruccion -> instruccion2 .

    error           reduce using rule 3 (instruccion -> instruccion2 .)
    FUNCTION        reduce using rule 3 (instruccion -> instruccion2 .)
    COMENTARIO      reduce using rule 3 (instruccion -> instruccion2 .)
    COMENTARIO_MULTILINEA reduce using rule 3 (instruccion -> instruccion2 .)
    LET             reduce using rule 3 (instruccion -> instruccion2 .)
    ID              reduce using rule 3 (instruccion -> instruccion2 .)
    CONSOLE         reduce using rule 3 (instruccion -> instruccion2 .)
    IF              reduce using rule 3 (instruccion -> instruccion2 .)
    WHILE           reduce using rule 3 (instruccion -> instruccion2 .)
    FOR             reduce using rule 3 (instruccion -> instruccion2 .)
    RETURN          reduce using rule 3 (instruccion -> instruccion2 .)
    BREAK           reduce using rule 3 (instruccion -> instruccion2 .)
    CONTINUE        reduce using rule 3 (instruccion -> instruccion2 .)
    INTERFACE       reduce using rule 3 (instruccion -> instruccion2 .)
    DECREMENTO      reduce using rule 3 (instruccion -> instruccion2 .)
    INCREMENTO      reduce using rule 3 (instruccion -> instruccion2 .)
    $end            reduce using rule 3 (instruccion -> instruccion2 .)


state 4

    (4) instruccion -> funcion .

    error           reduce using rule 4 (instruccion -> funcion .)
    FUNCTION        reduce using rule 4 (instruccion -> funcion .)
    COMENTARIO      reduce using rule 4 (instruccion -> funcion .)
    COMENTARIO_MULTILINEA reduce using rule 4 (instruccion -> funcion .)
    LET             reduce using rule 4 (instruccion -> funcion .)
    ID              reduce using rule 4 (instruccion -> funcion .)
    CONSOLE         reduce using rule 4 (instruccion -> funcion .)
    IF              reduce using rule 4 (instruccion -> funcion .)
    WHILE           reduce using rule 4 (instruccion -> funcion .)
    FOR             reduce using rule 4 (instruccion -> funcion .)
    RETURN          reduce using rule 4 (instruccion -> funcion .)
    BREAK           reduce using rule 4 (instruccion -> funcion .)
    CONTINUE        reduce using rule 4 (instruccion -> funcion .)
    INTERFACE       reduce using rule 4 (instruccion -> funcion .)
    DECREMENTO      reduce using rule 4 (instruccion -> funcion .)
    INCREMENTO      reduce using rule 4 (instruccion -> funcion .)
    $end            reduce using rule 4 (instruccion -> funcion .)


state 5

    (5) instruccion -> comentarios .
    (23) instruccion3 -> comentarios .
